<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet_info"
    android:elevation="10dp"
    android:background="@color/white"
    app:behavior_hideable="true"
    app:layout_behavior="com.test.mvvmcicd.utils.LockableBottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/header_view"
        layout="@layout/header_view_2_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ListView
        android:id="@+id/table_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_view">
    </ListView>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:alpha="0.3"
        android:background="#3a3a43"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_view"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_device_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cl_location"
        app:layout_constraintTop_toBottomOf="@+id/table_view">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/tvDeviceIcon"
            android:layout_width="@dimen/button_size_56"
            android:layout_height="@dimen/button_size_56"
            android:backgroundTint="@color/container"
            android:gravity="center"
            android:padding="@dimen/padding_16"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="0"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/selector_enable_color"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:maxLines="1"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/tvDeviceIconTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="devices"
            android:textColor="@color/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/tvDeviceIcon"
            app:layout_constraintEnd_toEndOf="@+id/tvDeviceIcon"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceIcon"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cl_device_info"
        app:layout_constraintEnd_toStartOf="@+id/cl_more_info"
        app:layout_constraintTop_toBottomOf="@+id/table_view">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/ivLocationIcon"
            android:layout_width="@dimen/button_size_56"
            android:layout_height="@dimen/button_size_56"
            android:backgroundTint="@color/container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/fab_edit"
            app:iconTint="@color/selector_enable_color" />
        <TextView
            android:id="@+id/tvLocationIconTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="location"
            android:textColor="@color/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/ivLocationIcon"
            app:layout_constraintEnd_toEndOf="@+id/ivLocationIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivLocationIcon"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_more_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/cl_location"
        app:layout_constraintEnd_toStartOf="@+id/cl_add_nodes"
        app:layout_constraintTop_toBottomOf="@+id/table_view">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/ivMoreIcon"
            android:layout_width="@dimen/button_size_56"
            android:layout_height="@dimen/button_size_56"
            android:backgroundTint="@color/container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/fab_more"
            app:iconTint="@color/primary" />
        <TextView
            android:id="@+id/tvMoreIconTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="more"
            android:textColor="@color/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/ivMoreIcon"
            app:layout_constraintEnd_toEndOf="@+id/ivMoreIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivMoreIcon"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_add_nodes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/cl_more_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_view">
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/ivAddNodeIcon"
            android:layout_width="@dimen/button_size_56"
            android:layout_height="@dimen/button_size_56"
            android:backgroundTint="@color/container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/fab_add"
            app:iconTint="@color/primary" />
        <TextView
            android:id="@+id/tvAddNodeIconTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="add_node"
            android:textColor="@color/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/ivAddNodeIcon"
            app:layout_constraintEnd_toEndOf="@+id/ivAddNodeIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivAddNodeIcon"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tvTroubleShooting"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size_36"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/ripple_container_button"
        android:gravity="center"
        android:text="learn more"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:visibility="gone"
        style="@style/CustomButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_view"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>